add worklets example

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <div id="disappear"></div>
         </div>
       </div>
+      <div class=".element"></div>
     </div>
   </body>
   <script src="./script.js"></script>
